<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_cheems"
    android:orientation="vertical"
    tools:context=".GanadorFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgGanador"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/texto_felicidades"
            android:src="@drawable/icon_cheems_felicidades" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="@string/texto_ganador"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:labelFor="@id/txtNombre"
            android:text="@string/texto_ganador_nombre"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="#FFF"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_weight="1"
            android:text="@string/txt_ganador_guardar"
            android:textColor="#FFF"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</LinearLayout>